Added thumbnail and minor fixes

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,4 +1,4 @@
 
 [autoplace-control-names]
 vulcanus_volcanism=[img=fluid.lava] Vulcano
-ammonia_ocean=[img=fluid.ammonia] Ammonia ocean
+ammonia_ocean=[img=fluid.ammoniacal-solution] Ammonia ocean
