--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,4 +1,8 @@
 
 [autoplace-control-names]
 vulcanus_volcanism=[img=fluid.lava] Vulcano
+holmium-ore=Homium ore
 ammonia_ocean=[img=fluid.ammoniacal-solution] Ammonia ocean
+
+[entity-name]
+holmium-ore=Homium ore
