new technology for traveling to solar system edge

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -6,3 +6,6 @@ ammonia_ocean=[img=fluid.ammoniacal-solution] Ammonia ocean
 
 [entity-name]
 holmium-ore=Homium ore
+
+[technology-name]
+solar-system-edge-discovery=Solar system edge discovery
