--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -2,13 +2,13 @@
 [autoplace-control-names]
 vulcanus_volcanism=[img=fluid.lava] Vulcano
 vulcanus_volcanism_description=Vulcane will not spawn on starting area
-holmium-ore=Homium ore
+holmium-ore=Holmium ore
 ammonia_ocean=[img=fluid.ammoniacal-solution] Ammonia ocean
 ammonia_ocean_description=Amonia oceans will only spawn towards the north
 gleba_plants_description=Gleba plants only spawn towards the south
 
 [entity-name]
-holmium-ore=Homium ore
+holmium-ore=Holmium ore
 
 [technology-name]
 solar-system-edge-discovery=Solar system edge discovery
